[package]
name = "docker-hostmanager"
version = "0.1.0"
edition = "2021"
authors = ["Dalibor Karlović <dalibor@flexolabs.io>"]
description = "Automatically update /etc/hosts with Docker container hostnames"
repository = "https://github.com/dkarlovi/docker-hostmanager.rs"
license = "MIT"
keywords = ["docker", "hosts", "networking", "containers"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive", "color", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[dev-dependencies]
tempfile = "3"
