[package]
name = "docker-hostmanager"
version = "0.1.0"
edition = "2021"
authors = ["Dalibor Karlović <dalibor@flexolabs.io>"]
description = "Automatically update /etc/hosts with Docker container hostnames"
repository = "https://github.com/dkarlovi/docker-hostmanager.rs"
license = "MIT"
keywords = ["docker", "hosts", "networking", "containers"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[profile.release]
lto = "fat"

[dependencies]
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive", "color", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde = { version = "1", features = ["derive"] }
colored = "3"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Production-critical restriction lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
string_slice = "warn"

# Catch development leftovers
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Good practices
exit = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
use_debug = "warn"
verbose_file_reads = "warn"

# Allow for CLI apps (would warn in libraries)
print_stdout = "allow"
print_stderr = "allow"

# Disable overly pedantic lints
too_many_lines = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
